--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: rikka的小站
 SEOTitle: rikka的小站
 header-img: img/post-bg-desk.jpg
 email: rik014x@outlook.com
-description: 自己做着玩的网站XD
+description: "自己做着玩的网站XD"
 keyword:"rikka"
 url: "https://0rikka0.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
